--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       />
       <button id="add-button" class="montserrat">Add to List</button>
       <ul id="movies-list"></ul>
+      <p>Made By Abishek</p>
     </div>
     <script src="index.js" type="module"></script>
   </body>
